--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <meta name="MobileOptimized" content="480">
         <meta name="format-detection" content="telephone=no">
         <meta name="author" content="moutechs">
+        <link rel="icon" href="./static/favicon.png">
     </head>
     <body style="margin:0;">
         <noscript>
