--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <meta name="HandheldFriendly" content="True">
         <meta name="MobileOptimized" content="480">
         <meta name="format-detection" content="telephone=no">
-        <meta name="author" content="moutechs">
+        <meta name="author" content="">
         <link rel="icon" href="./static/favicon.png">
     </head>
     <body style="margin:0;">
